--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-replace": "^5.0.5",
     "@sveltejs/adapter-static": "^3.0.1",
     "rollup": "^2.41.4",
     "rollup-plugin-css-only": "^3.1.0",
