--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-html": "^1.0.3",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-replace": "^5.0.5",
     "rollup": "^2.41.4",
